# histolab

./: .ci-ignore  .coveragerc  .flake8  .gitignore  .gitpod.yml  .pre-commit-config.yaml  .travis.yml  AUTHORS  CHANGELOG.rst  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  Untitled.ipynb  bandit.yaml  index.html  index.md  mypy.ini  pyproject.toml  pytest.ini  readthedocs.yml  requirements-dev.txt  requirements-tests.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  help-question.md
.github/codeql/: codeql-config.yml
.github/workflows/: benchmarks.yml  cache.yml  ci.yml  codeql.yml  pre-release.yml  release.yml  tests.yml
dev/bench/: data.js
docs/: conf.py  contributing.rst  index.rst  installation.rst  quickstart.rst  readme.rst  requirements.txt  tissue_masks.rst  utils.rst
docs/api/: data.rst  filters.rst  masks.rst  scorer.rst  slide.rst  stain_normalizer.rst  tile.rst  tiler.rst  util.rst  utils.rst
docs/api/filters/: compositions.rst  image_filters.rst  image_filters_functional.rst  morphological_filters.rst  morphological_filters_functional.rst
examples/: examples_reqs.txt
examples/GTEx/: GTEx_AIDP2021.csv  README.md  extract_tile_PW_GTEx.py  extract_tile_pw_gtex.py  test_tiles_PW_GTEx_AIDP2021.csv  train_tiles_PW_GTEx_AIDP2021.csv
examples/TCGA/: README.md  clinical_csv_example.csv  extract_tile_pw_tcga.py
histolab/: __init__.py  exceptions.py  masks.py  mixins.py  scorer.py  slide.py  stain_normalizer.py  tile.py  tiler.py  types.py  util.py
histolab/data/: __init__.py  _registry.py
histolab/filters/: compositions.py  image_filters.py  image_filters_functional.py  morphological_filters.py  morphological_filters_functional.py  util.py
src/histolab/: __init__.py  exceptions.py  filter.py  filter_functional.py  filters.py  masks.py  mixins.py  scorer.py  slide.py  stain_normalizer.py  tile.py  tiler.py  tiles.py  types.py  util.py
src/histolab/data/: __init__.py  _registry.py  util.py
src/histolab/filters/: compositions.py  filter_functional.py  image_filters.py  image_filters_functional.py  morphological_filters.py  morphological_filters_functional.py  util.py
src/tests/unit/: test_slide.py  unitutil.py
tests/: base.py  conftest.py  unitutil.py  util.py
tests/benchmarks/: test_benchmarks.py
tests/expectations/mask-arrays/: biggest-tissue-box-cmu-1-small-region.npy  biggest-tissue-box-kidney-48-5.npy  biggest-tissue-box-tcga-cr-7395.npy  diagnostic-slide-thumb-grays-mask.npy  diagnostic-slide-thumb-gs-canny-edges-mask.npy  diagnostic-slide-thumb-gs-filter-entropy-mask.npy  diagnostic-slide-thumb-gs-otsu-threshold-mask.npy  diagnostic-slide-thumb-gs-yen-threshold-mask.npy  diagnostic-slide-thumb-hsv-blue-filter-mask.npy  diagnostic-slide-thumb-hsv-blue-pen-filter-mask.npy  diagnostic-slide-thumb-hsv-grays-mask.npy  diagnostic-slide-thumb-hsv-green-filter-mask.npy  diagnostic-slide-thumb-hsv-green-pen-filter-mask.npy  diagnostic-slide-thumb-hsv-otsu-threshold-mask.npy  diagnostic-slide-thumb-hsv-otsu-threshold-remove-small-objects-mask.npy  diagnostic-slide-thumb-hsv-pen-marks-mask.npy  diagnostic-slide-thumb-hsv-red-filter-mask.npy  diagnostic-slide-thumb-hsv-red-pen-filter-mask.npy  diagnostic-slide-thumb-hsv-yen-threshold-mask.npy  diagnostic-slide-thumb-hysteresis-threshold-mask.npy  diagnostic-slide-thumb-otsu-threshold-mask.npy  diagnostic-slide-thumb-red-pen-filter-mask.npy  diagnostic-slide-thumb-rgb-blue-filter-mask.npy  diagnostic-slide-thumb-rgb-grays-mask.npy  diagnostic-slide-thumb-rgb-green-pen-filter-mask.npy  diagnostic-slide-thumb-rgb-otsu-threshold-mask.npy  diagnostic-slide-thumb-rgb-pen-marks-mask.npy  diagnostic-slide-thumb-rgb-rag-threshold-labels.npy  diagnostic-slide-thumb-rgb-rag-threshold-maskedlabels.npy  diagnostic-slide-thumb-rgb-yen-threshold-mask.npy  diagnostic-slide-thumb-rgb1-hysteresis-threshold-mask.npy  diagnostic-slide-thumb-rgb1-hysteresis-threshold-remove-small-objects-mask.npy  diagnostic-slide-thumb-rgba1-green-ch-filter-mask.npy  diagnostic-slide-thumb-rgba1-red-filter-mask.npy  diagnostic-slide-thumb-rgba2-green-ch-filter-mask.npy  diagnostic-slide-thumb-rgba2-red-filter-mask.npy  diagnostic-slide-thumb-rgba3-blue-filter-mask.npy  diagnostic-slide-thumb-rgba4-green-ch-filter-mask.npy  diagnostic-slide-thumb-ycbcr-blue-filter-mask.npy  diagnostic-slide-thumb-ycbcr-blue-pen-filter-mask.npy  (+33 more)
tests/expectations/python-expr/: 5-x-5-ones.py  5-x-5-x-3-ones.py  5-x-5-x-3-zeros.py  5-x-5-x-4-ones.py  5-x-5-x-4-zeros.py  5-x-5-zeros.py  apply-mask-image-exp1.py  apply-mask-image-exp2.py  apply-mask-image-exp3.py  apply-mask-image-exp4.py  np-to-pil-l.py  np-to-pil-la.py  np-to-pil-rgba.py  slide_properties_dict.py  threshold-to-mask-140.py  threshold-to-mask-160.py  threshold-to-mask-178.py  threshold-to-mask-200.py  threshold-to-mask-37.py  threshold-to-mask-39.py
tests/expectations/sparse-mask-arrays/: resized-base-mask.npz  resized-complex-mask.npz
tests/expectations/svs-images/: small-region-svs-resampled-array.npy
tests/fixtures/: __init__.py
tests/fixtures/arrays/: apply-mask-image-f1.npy  apply-mask-image-f2.npy  apply-mask-image-f3.npy  apply-mask-image-f4.npy  np-to-pil-l.npy  np-to-pil-la.npy  np-to-pil-rgba-float01.npy  np-to-pil-rgba.npy
tests/fixtures/mask-arrays/: apply-mask-image-f1.npy  apply-mask-image-f2.npy  apply-mask-image-f3.npy  apply-mask-image-f4.npy  diagnostic-slide-thumb-hsv-otsu-threshold-mask.npy  ytma1.npy  ytma2.npy
tests/fixtures/svs-images/: broken.svs  tcga-cr-7395-01a-01-ts1.svs
tests/fixtures/tiff-images/: kidney-48-5.tif
tests/integration/: test_image_filters.py  test_masks.py  test_morphological_filters.py  test_scorer.py  test_slide.py  test_stain_normalizer.py  test_tile.py  test_tiler.py  test_util.py
tests/unit/: test_compositions.py  test_exceptions.py  test_image_filters.py  test_masks.py  test_mixins.py  test_morphological_fillters.py  test_scorer.py  test_slide.py  test_stain_normalizer.py  test_tile.py  test_tiler.py  test_util.py
(+5 files in other folders)
