[tool.poetry]
name = "histolab"
version = "0.7.0"
description = "Python library for Digital Pathology Image Processing"
authors = ["E. Arbitrio, N. Bussola, A. Marcolini"]
license = "Apache-2.0"
readme = "README.md"
maintainers = ["Ernesto Arbitrio <ernesto.arbitrio@gmail.com>", "Alessia Marcolini <98marcolini@gmail.com>", "Nicole Bussola <nicole.bussolaceradini@gmail.com>"]
homepage = "https://github.com/histolab/histolab"
repository = "https://github.com/histolab/histolab"
documentation = "https://histolab.readthedocs.io"
packages = [{include="histolab"}]
classifiers = [
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "License :: OSI Approved :: Apache Software License",
        "Operating System :: OS Independent",
        "Intended Audience :: Science/Research",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
Pillow = ">=9.1.0,<12.0.0"
scikit-image = ">=0.20.0,<0.24.1"
numpy = ">=1.23.2,<=2.0.2"
scipy = ">=1.5.0,<1.13.2"
openslide-python = ">=1.4.0,<1.4.3"
Sphinx = {version = ">=5.1.1,<8.0.0", optional = true}
sphinx-rtd-theme = {version = ">=1,<4", optional = true}
sphinxcontrib-katex = {version = ">=0.8.6,<0.10.0", optional = true}
sphinxemoji = {version = ">=0.2,<0.4", optional = true}
sphinx-prompt = {version = "1.8.0", optional = true}
certifi = ">=2023.7.22"

[tool.poetry.dev-dependencies]
flake8 = "*"
pre-commit = "^4.2.0"
pyflakes = "^3.0.1"
pycodestyle = "^2.10.0"
toml = "^0.10.2"
twine = "^6.1.0"
Sphinx = "^7.4.7"
sphinx-rtd-theme = "^3.0.2"
ipdb = "^0.13.13"
isort = "^6.0.1"
sphinxcontrib-katex = ">=0.8.6,<0.10.0"
pytest-html = "^4.1.1"
black = "^25.1.0"
sphinxemoji = "^0.3.1"
sphinx-prompt = "^1.7.0"
bandit = "^1.8.5"
large-image = ">=1.8.11,<1.32.10"
large-image-source-openslide = ">=1.8.11,<1.32.10"
large-image-source-pil = ">=1.8.11,<1.32.10"
pytest = "^8.4.1"
pytest-xdist = "^3.7.0"
pooch = "^1.8.0"
coverage = "^7.9.1"
pytest-cov = "^6.2.1"
pytest-benchmark = "^5.1.0"

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme", "sphinxcontrib-katex", "sphinxemoji", "sphinx-prompt"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
looponfailroots = "tests"
python_classes = ["Test", "Describe"]
python_files = "test_*.py"
python_functions = ["test_", "it_", "they_", "but_", "and_it_", "or_it"]
testpaths = "tests"
